syntax = "proto3";

package com.example.demo.user;
option java_multiple_files = true;
option java_outer_classname = "UsersProto";


import "google/protobuf/timestamp.proto";

service UserAppService {
  rpc AddUser(AddUserRequest) returns (AddUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc UserLogin(UserLoginRequest) returns (UserLoginResponse);
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
}

message UserApp {
  int64 id = 1;
  string username = 2;
  string password = 3;
  string email = 4;
  Role role = 5;
  string address = 6;
}

enum Role {
  NEREGISTROVANI_KORISNIK = 0;
  GOST = 1;
  HOST = 2;
}

message AddUserRequest {
  UserApp user = 1;
}

message AddUserResponse {
  bool success = 1;
}

message GetUserRequest {
  int64 id = 1;
}

message GetUserResponse {
  UserApp user = 1;
}

message DeleteUserRequest {
  int64 id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message UserLoginRequest {
  string username = 1;
  string password = 2;
}

message UserLoginResponse {
  UserApp user = 1;
}

message GetUsersRequest {
}

message GetUsersResponse {
  repeated UserApp users = 1;
}


