syntax = "proto3";

package BloodBankAPI;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

message Reservation {
  int32 id = 1;
  int32 guest_id = 2;
  int32 booking_id = 3;
  int32 no_of_guests = 4;
  bool accepted = 5;
}
message Accomodation {
  int32 id = 1;
  string name = 2;
  string description=3;
   string location=4;
  string images=5;
  int32 beds=6;
  int32 hostId=7;
}

message GetAllRequest {}

message GetAllResponse {
  repeated Reservation reservations = 1;
}
message GetAllAccommodationResponse {
  repeated Accomodation accommodations = 1;
}
message GetByIdRequest {
  int32 id = 1;
}

message GetByIdResponse {
  Reservation reservation = 1;
}

message GetAllByGuestIdRequest {
  int32 guest_id = 1;
}

message GetAllByGuestIdResponse {
  repeated Reservation reservations = 1;
}

message CreateRequest {
  Reservation reservation = 1;
}

message CreateResponse {
  google.protobuf.StringValue message = 1;
}

message DeleteRequest {
  int32 id = 1;
}

message DeleteResponse {
  google.protobuf.StringValue message = 1;
}

message DeleteByGuestIdRequest {
  int32 guest_id = 1;
}

message DeleteByGuestIdResponse {
  google.protobuf.StringValue message = 1;
}

message UpdateRequest {
  int32 id = 1;
  Reservation reservation = 2;
}

message UpdateResponse {
  Reservation reservation = 1;
}

service ReservationService {
  rpc GetAll (GetAllRequest) returns (GetAllResponse);
  rpc GetById (GetByIdRequest) returns (GetByIdResponse);
  rpc GetAllByGuestId (GetAllByGuestIdRequest) returns (GetAllByGuestIdResponse);
  rpc Create (CreateRequest) returns (CreateResponse);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
  rpc DeleteByGuestId (DeleteByGuestIdRequest) returns (DeleteByGuestIdResponse);
  rpc Update (UpdateRequest) returns (UpdateResponse);
  rpc GetAllGuestAccommodations(GetAllByGuestIdRequest) returns (GetAllAccommodationResponse);
}